-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
team
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8000114 | 8 | Staffan Larsen | P2 | Closed | Fixed | b58 |
SAJDI fails after NPG changes. See comments.
- backported by
-
JDK-8000114 NPG: SAJDI tests fail with sun.jvm.hotspot.types.WrongTypeException: No suitable match for type ...
-
- Closed
-
- relates to
-
JDK-8022864 [TESTBUG] Need to run some tests with and without CDS
-
- Closed
-